# bazel-swig

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  requirements.in  requirements.txt
.github/workflows/: amd64_docker.yml  amd64_docker_bazel.yml  amd64_linux.yml  amd64_linux_bazel.yml  amd64_macos.yml  amd64_macos_bazel.yml  amd64_windows.yml  amd64_windows_bazel.yml  arm64_docker_bazel.yml  arm64_macos_bazel.yml  riscv64_docker_bazel.yml
FooBar/: BUILD.bazel
bazel/: BUILD.bazel  base.i  swig_java.bzl
ci/: Makefile
ci/docker/almalinux/: Dockerfile
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/rockylinux/: Dockerfile
ci/docker/ubuntu/: Dockerfile
ci/docs/: docker.dot
java/: BUILD.bazel
java/dev/mizux/bazel/: BUILD.bazel  Loader.java
java/dev/mizux/javanative/: BUILD.bazel  Loader.java
native_lib/: BUILD.bazel  foo.cc  foo.cpp  foo_test.cc  foo_test.cpp
native_lib/java/: BUILD.bazel  BarTest.java  FooTest.java  foo.i
native_lib/python/: BUILD.bazel  foo.i
pure_lib/: BUILD.bazel  MyLib.java  MyLibTest.java
