load("@rules_python//python:pip.bzl", "compile_pip_requirements")

exports_files([
    "requirements.in",
    "requirements.txt",
])

compile_pip_requirements(
    name = "requirements",
    extra_args = [
        "--allow-unsafe",  # Pin packages considered unsafe
        "--resolver=backtracking",  # Avoid warning, new default
    ],
    generate_hashes = False,
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
)
