load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "foo",
    srcs = ["foo.cc"],
    hdrs = ["foo.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "foo_test",
    srcs = ["foo_test.cc"],
    #copts = ["-Iexternal/gtest/include"],
    deps = [
        ":foo",
        "@googletest//:gtest_main",
    ],
)
