# Java wrapper for foo library.
load("//bazel:swig_java.bzl", "mizux_java_wrap_cc")
load("@rules_java//java:defs.bzl", "java_test")
load("@rules_jvm_external//:defs.bzl", "artifact")
load("@contrib_rules_jvm//java:defs.bzl", "java_junit5_test")

mizux_java_wrap_cc(
  name = "foo",
  src = "foo.i",
  package = "dev.mizux.javanative",
  swig_includes = [
    "//java:base_swig",
  ],
  #use_directors = True,
  visibility = ["//visibility:public"],
  deps = [
    "//native_lib:foo",
  ],
)

java_junit5_test(
  name = "FooTest",
  size = "small",
  srcs = ["FooTest.java"],
  data = select({
    "@platforms//os:linux": ["//java/dev/mizux/javanative:libjninative.so"],
    "@platforms//os:osx": ["//java/dev/mizux/javanative:libjninative.dylib"],
    "@platforms//os:windows": ["//java/dev/mizux/javanative:jninative.dll"],
  }),
  test_class = "dev.mizux.javanative.FooTest",
  jvm_flags = select({
    "@platforms//os:windows": ["-Djava.library.path=..\\\\..\\\\..\\\\..\\\\java\\\\dev\\\\mizux\\\\javanative"],
    "//conditions:default": [],
  }),
  deps = [
    "//java/dev/mizux/javanative:Loader",
    ":foo",
    "@maven//:com_google_truth_truth",
    artifact("org.junit.jupiter:junit-jupiter-api"),
    artifact("org.junit.jupiter:junit-jupiter-params"),
    artifact("org.junit.jupiter:junit-jupiter-engine"),
    artifact("org.junit.platform:junit-platform-launcher"),
    artifact("org.junit.platform:junit-platform-reporting"),
  ],
  tags = ["unit"],
)

java_test(
  name = "BarTest",
  size = "small",
  srcs = ["BarTest.java"],
  data = select({
    "@platforms//os:linux": ["//java/dev/mizux/javanative:libjninative.so"],
    "@platforms//os:osx": ["//java/dev/mizux/javanative:libjninative.dylib"],
    "@platforms//os:windows": ["//java/dev/mizux/javanative:jninative.dll"],
  }),
  main_class = "dev.mizux.javanative.BarTest",
  jvm_flags = select({
    "@platforms//os:windows": ["-Djava.library.path=..\\\\..\\\\..\\\\..\\\\java\\\\dev\\\\mizux\\\\javanative"],
    "//conditions:default": [],
  }),
  deps = [
    "//java/dev/mizux/javanative:Loader",
    ":foo",
  ],
)
