# Java wrapper for foo library.
load("//bazel:swig_java.bzl", "mizux_java_wrap_cc")
load("@rules_java//java:defs.bzl", "java_test")
load("@rules_jvm_external//:defs.bzl", "artifact")
load("@contrib_rules_jvm//java:defs.bzl", "java_junit5_test")

mizux_java_wrap_cc(
  name = "foo",
  src = "foo.i",
  package = "dev.mizux.javanative",
  swig_includes = [
    "//java:base_swig",
  ],
  #use_directors = True,
  visibility = ["//visibility:public"],
  deps = [
    "//native_lib:foo",
  ],
)

java_junit5_test(
  name = "FooTest",
  size = "small",
  srcs = ["FooTest.java"],
  test_class = "dev.mizux.javanative.FooTest",
  deps = [
    ":foo",
    "//java/dev/mizux/javanative:Loader",
    "@maven//:com_google_truth_truth",
    artifact("org.junit.jupiter:junit-jupiter-api"),
    artifact("org.junit.jupiter:junit-jupiter-params"),
    artifact("org.junit.jupiter:junit-jupiter-engine"),
    artifact("org.junit.platform:junit-platform-launcher"),
    artifact("org.junit.platform:junit-platform-reporting"),
  ],
  tags = ["unit"],
)

java_test(
  name = "BarTest",
  size = "small",
  srcs = ["BarTest.java"],
  main_class = "dev.mizux.javanative.BarTest",
  test_class = "dev.mizux.javanative.BarTest",
  deps = [
    ":foo",
    "//java/dev/mizux/javanative:Loader",
  ],
)
