# Python wrapper for foo library.
load("@rules_python//python:defs.bzl", "py_test")

#py_test(
#    name = "foo_test",
#    size = "small",
#    srcs = ["foo_test.py"],
#    python_version = "PY3",
#    data = select({
#      "@platforms//os:windows": [":myfoo.pyd"],
#      "//conditions:default": [":myfoo.so"],
#    }),
#    tags = ["unit"],
#)
