# Utilities to load native libraries in java.
java_library(
    name = "Loader",
    srcs = ["Loader.java"],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:net_java_dev_jna_jna",
    ],
)

cc_binary(
    name = "libjninative.so",
    target_compatible_with = select({
      "@platforms//os:linux": [],
      "//conditions:default": ["@platforms//:incompatible"],
    }),
    linkshared = True,
    visibility = ["//visibility:public"],
    deps = [
        "//native_lib/java:foo_cc",
    ],
)

cc_binary(
    name = "libjninative.dylib",
    target_compatible_with = select({
      "@platforms//os:osx": [],
      "//conditions:default": ["@platforms//:incompatible"],
    }),
    linkshared = True,
    visibility = ["//visibility:public"],
    deps = [
        "//native_lib/java:foo_cc",
    ],
)

cc_binary(
    name = "jninative.dll",
    target_compatible_with = select({
      "@platforms//os:windows": [],
      "//conditions:default": ["@platforms//:incompatible"],
    }),
    linkshared = True,
    visibility = ["//visibility:public"],
    deps = [
        "//native_lib/java:foo_cc",
    ],
)
