# Utilities to load native libraries in java.
cc_binary(
    name = "libjninative.so",
    target_compatible_with = select({
      "@platforms//os:linux": [],
      "//conditions:default": ["@platforms//:incompatible"],
    }),
    linkshared = True,
    visibility = ["//visibility:public"],
    deps = [
        "//native_lib/java:foo_cc",
    ],
)

cc_binary(
    name = "libjninative.dylib",
    target_compatible_with = select({
      "@platforms//os:osx": [],
      "//conditions:default": ["@platforms//:incompatible"],
    }),
    linkshared = True,
    visibility = ["//visibility:public"],
    deps = [
        "//native_lib/java:foo_cc",
    ],
)

cc_binary(
    name = "jninative.dll",
    target_compatible_with = select({
      "@platforms//os:windows": [],
      "//conditions:default": ["@platforms//:incompatible"],
    }),
    linkshared = True,
    visibility = ["//visibility:public"],
    deps = [
        "//native_lib/java:foo_cc",
    ],
)

java_library(
    name = "Loader",
    srcs = ["Loader.java"],
    visibility = ["//visibility:public"],
    runtime_deps = select({
      "@platforms//os:linux": ["//java/dev/mizux/javanative:libjninative.so"],
      "@platforms//os:osx": ["//java/dev/mizux/javanative:libjninative.dylib"],
      "@platforms//os:windows": ["//java/dev/mizux/javanative:jninative.dll"],
    }),
    deps = [
        "@maven//:net_java_dev_jna_jna",
    ],
)

